data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_18.wast
;; 9. **Loop Containing `nop` followed by Break with `br`**: Place a `nop` inside a looping construct and insert a `br` to break out of the loop. Assess if the `nop` influences the branch target causing incorrect looping behavior.

(assert_malformed
  (module (func $loop-nop-br (loop (nop) (br 0))))
)